force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>Used to capture feedback from users as they go through test scripts for UAT.</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>SF-{000}</displayFormat>
        <label>Feedback Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>