force-app/main/default/objects/Feedback__c/fields/AcknowledgedAt__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedAt__c</fullName>
    <description>Timestamp when the feedback first moved out of status New (first triage).</description>
    <inlineHelpText>Set automatically when the item is first assigned or leaves New. Used for triage KPIs.</inlineHelpText>
    <label>Acknowledged At</label>
    <type>DateTime</type>
</CustomField>