force-app/main/default/objects/Feedback__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user responsible for triaging or fixing this feedback item.</description>
    <inlineHelpText>Select the consultant or developer owning this item. Slack may @mention them if a user mapping exists.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>