force-app/main/default/objects/Feedback__c/fields/FirstSlackPostAt__c.field-meta.xml
<CustomField>
    <fullName>FirstSlackPostAt__c</fullName>
    <description>When the first Slack notification for this feedback was posted successfully.</description>
    <inlineHelpText>System-managed. Blank until the Slack Flow/Apex posts successfully.</inlineHelpText>
    <label>First Slack Post At</label>
    <type>DateTime</type>
</CustomField>