force-app/main/default/objects/Feedback__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Detailed description of the issue, including steps to reproduce and optional screenshots.</description>
    <inlineHelpText>Required. Enter steps to reproduce; paste screenshots into this rich text field when helpful.</inlineHelpText>
    <label>Issue Description / Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>