force-app/main/default/objects/Feedback__c/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <description>Short title that identifies the feedback issue.</description>
    <inlineHelpText>Required. Use a clear one-line summary (for example: Checkout button overlaps footer on mobile).</inlineHelpText>
    <label>Issue Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>