force-app/main/default/objects/Feedback__c/fields/Link_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Record__c</fullName>
    <description>URL of the Salesforce record where the issue occurred.</description>
    <inlineHelpText>Paste the Lightning link to the Case, Account, Contact, or other record involved.</inlineHelpText>
    <label>Link To Record</label>
    <type>Url</type>
</CustomField>