force-app/main/default/objects/Feedback__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <description>Level of effort estimate for deferred or enhancement feedback.</description>
    <inlineHelpText>Use for Deferred - Future Phase items to estimate relative effort.</inlineHelpText>
    <label>LOE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>