force-app/main/default/objects/Feedback__c/fields/Parent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Parent_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links related child feedback to a parent feedback item.</description>
    <inlineHelpText>Optional. Relate follow-up or split items back to the original feedback.</inlineHelpText>
    <label>Parent Feedback</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>