force-app/main/default/objects/Feedback__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>Persona, team, or user group impacted by this feedback.</description>
    <inlineHelpText>Choose who experiences the issue (for example Manager or Agent).</inlineHelpText>
    <label>Persona / Team / Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>