force-app/main/default/objects/Feedback__c/fields/ResolvedAt__c.field-meta.xml
<CustomField>
    <fullName>ResolvedAt__c</fullName>
    <description>Timestamp when the feedback first reached a terminal resolution status (Resolved or UAT Complete).</description>
    <inlineHelpText>System-managed when Status first becomes Resolved or UAT Complete.</inlineHelpText>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>