force-app/main/default/objects/Feedback__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>Row or step number from the test script this feedback refers to.</description>
    <inlineHelpText>Optional. Enter the spreadsheet or script row/step number for faster triage.</inlineHelpText>
    <label>Row Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>