force-app/main/default/objects/Feedback__c/fields/SlackMessageTs__c.field-meta.xml
<CustomField>
    <fullName>SlackMessageTs__c</fullName>
    <description>Delivery marker for automated Slack posts (sent:timestamp) to prevent duplicates.</description>
    <inlineHelpText>System-managed. Do not edit unless resetting Slack delivery for retest.</inlineHelpText>
    <label>Slack Message Timestamp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>