force-app/main/default/objects/Feedback__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Documents how the defect or request was resolved.</description>
    <inlineHelpText>Capture the fix, workaround, or decision so UAT can retest with context.</inlineHelpText>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>