force-app/main/default/objects/Feedback__c/fields/Test_Script_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Name__c</fullName>
    <description>Name of the UAT test script this feedback refers to.</description>
    <inlineHelpText>Optional. Enter the script or scenario name so testers and consultants can find context quickly.</inlineHelpText>
    <label>Test Script Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>