force-app/main/default/objects/Feedback__c/fields/TimeToAcknowledgeMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeToAcknowledgeMinutes__c</fullName>
    <description>Minutes from feedback creation to first acknowledgement (first move off New).</description>
    <inlineHelpText>System-calculated KPI. Lower values mean faster triage.</inlineHelpText>
    <label>Time To Acknowledge (min)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>