force-app/main/default/objects/Feedback__c/fields/TimeToResolveHours__c.field-meta.xml
<CustomField>
    <fullName>TimeToResolveHours__c</fullName>
    <description>Hours from feedback creation to first terminal resolution (Resolved or UAT Complete).</description>
    <inlineHelpText>System-calculated KPI for end-to-end cycle time.</inlineHelpText>
    <label>Time To Resolve (hrs)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>