force-app/main/default/objects/Feedback__c/fields/TimeToStartMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeToStartMinutes__c</fullName>
    <description>Minutes between Acknowledged At and Work Started At (queue wait after claim).</description>
    <inlineHelpText>System-calculated KPI for how long work waited after triage.</inlineHelpText>
    <label>Time To Start (min)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>