force-app/main/default/objects/Feedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Category of feedback submitted by the tester.</description>
    <inlineHelpText>Choose Defect, Question, Incremental Enhancement, or New Enhancement.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Incremental Enhancement</fullName>
            </value>
            <value>
                <fullName>New Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>