force-app/main/default/objects/Feedback__c/fields/WorkStartedAt__c.field-meta.xml
<CustomField>
    <fullName>WorkStartedAt__c</fullName>
    <description>Timestamp when work first started (Status became In Progress or Dev In-Progress).</description>
    <inlineHelpText>System-managed when Status first indicates active development work.</inlineHelpText>
    <label>Work Started At</label>
    <type>DateTime</type>
</CustomField>