force-app/main/default/objects/Feedback__c/validationRules/Issue_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_Description_Required</fullName>
    <active>true</active>
    <description>Rich Text fields cannot be field-required; enforce Issue Description on create/update.</description>
    <errorConditionFormula>ISBLANK(Issue_Description__c)</errorConditionFormula>
    <errorDisplayField>Issue_Description__c</errorDisplayField>
    <errorMessage>Issue Description / Steps to Reproduce is required.</errorMessage>
</ValidationRule>