force-app/main/default/objects/Feedback__c/listViews/Deferred_Feedback.listView-meta.xml
<ListView>
    <fullName>Deferred_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Deferred - Future Phase</value>
    </filters>
    <label>Deferred Feedback</label>
</ListView>