force-app/main/default/objects/Feedback__c/listViews/Feedback_Items_Open.listView-meta.xml
<ListView>
    <fullName>Feedback_Items_Open</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Dev Ready,Dev In-Progress,Ready for QA (Dev Complete),QA Fail - Defect Resolution,Ready for UAT,Blocked,Reopened</value>
    </filters>
    <label>Feedback Items - Open</label>
</ListView>