force-app/main/default/objects/Feedback__c/listViews/My_Open_Feedback.listView-meta.xml
<ListView>
    <fullName>My_Open_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,In Progress,Ready for UAT,Reopened</value>
    </filters>
    <label>My Open Feedback</label>
</ListView>